# fintrack

./: .gitignore  Dockerfile  Procfile  alembic.ini  ci.yml  conftest.py  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: auth.py  budgets.py  expenses.py  reports.py  router.py
app/core/: config.py  database.py  dependencies.py  security.py
app/middleware/: errors.py  logging.py
app/models/: __init__.py  budget.py  category.py  expense.py  user.py
app/repositories/: __init__.py  base.py  budget.py  category.py  expense.py  user.py
app/schemas/: auth.py  base.py  budget.py  category.py  expense.py  user.py
app/services/: auth.py  budget.py  expense.py  report.py
app/workers/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 3626839ad686_initial_tables.py  fe10c008c82b_initial_tables.py
tests/integration/: test_auth.py  test_expense.py
tests/unit/: test_security.py
